# Blink

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/blink-core/: Cargo.toml
crates/blink-core/src/: buffer.rs  editor.rs  font_atlas.rs  icon_atlas.rs  lib.rs  renderer.rs  shader.wgsl  sidebar.rs  syntax.rs
scripts/: build-wasm.bat  build-wasm.sh  dev.bat  dev.sh
